force-app/main/default/objects/QuoteLineItem/fields/CO_ovcUpdateFlag__c.field-meta.xml
<CustomField>
    <fullName>CO_ovcUpdateFlag__c</fullName>
    <formula>IF ( isBlank(CO_ovcSalesOrderNumber__c),&apos;I&apos;,&apos;U&apos;)</formula>
    <label>SAP Update Flag (STE)</label>
    <type>Text</type>
</CustomField>