force-app/main/default/objects/QuoteLineItem/fields/CO_SAPSalesOrderNumber_MTE__c.field-meta.xml
<CustomField>
    <fullName>CO_SAPSalesOrderNumber_MTE__c</fullName>
    <label>SAP Sales Order Number (MTE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>