force-app/main/default/objects/QuoteLineItem/fields/CostTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>CostTotalPrice__c</fullName>
    <formula>Quantity * CostUnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>