force-app/main/default/objects/QuoteLineItem/fields/COWO_DeliverySchedule__c.field-meta.xml
<CustomField>
    <fullName>COWO_DeliverySchedule__c</fullName>
    <description>S4連携項目</description>
    <label>納入日程</label>
    <type>Date</type>
</CustomField>