force-app/main/default/objects/QuoteLineItem/fields/COWO_DesiredDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>COWO_DesiredDeliveryDate__c</fullName>
    <description>顧客が希望している納入日</description>
    <label>希望納期</label>
    <type>Date</type>
</CustomField>