force-app/main/default/objects/QuoteLineItem/fields/COWO_DetailCategory__c.field-meta.xml
<CustomField>
    <fullName>COWO_DetailCategory__c</fullName>
    <description>SAPの明細カテゴリ</description>
    <label>明細カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z110</fullName>
                <label>Z110:直送</label>
            </value>
            <value>
                <fullName>Z100</fullName>
                <label>Z100:在庫引当</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>