force-app/main/default/objects/QuoteLineItem/fields/COWO_DetailCategory_MTE__c.field-meta.xml
<CustomField>
    <fullName>COWO_DetailCategory_MTE__c</fullName>
    <label>Item Category (MTE)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CB1</fullName>
                <label>CB1:Drop ship w Not.</label>
            </value>
            <value>
                <fullName>CB2</fullName>
                <label>CB:2:Drop ship w/out Not.</label>
            </value>
            <value>
                <fullName>TAN</fullName>
                <default>true</default>
                <label>TAN:Distribution</label>
            </value>
            <value>
                <fullName>DB1</fullName>
                <label>DB1:DwnPmt Drop Ship w Not.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>