force-app/main/default/objects/QuoteLineItem/fields/COWO_DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_DiscountPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>特別に値引をする場合の金額</description>
    <label>明細値引</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>