force-app/main/default/objects/QuoteLineItem/fields/COWO_DiscountUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_DiscountUnitPrice__c</fullName>
    <label>お値引後見積明細単価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>