force-app/main/default/objects/QuoteLineItem/fields/COWO_FrontProfit__c.field-meta.xml
<CustomField>
    <fullName>COWO_FrontProfit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>合計金額-仕入価格
一括編集時に計算される</description>
    <label>利益（フロント）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>