force-app/main/default/objects/QuoteLineItem/fields/COWO_FrontProfitRate__c.field-meta.xml
<CustomField>
    <fullName>COWO_FrontProfitRate__c</fullName>
    <description>利益（フロント）/合計金額
一括編集時に計算される</description>
    <label>利益率（フロント）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>