force-app/main/default/objects/QuoteLineItem/fields/COWO_FrontPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_FrontPurchasePrice__c</fullName>
    <description>フロント営業がHHTおよびサプライヤーから仕入れる価格</description>
    <label>フロント仕入価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>