force-app/main/default/objects/QuoteLineItem/fields/COWO_Hangings__c.field-meta.xml
<CustomField>
    <fullName>COWO_Hangings__c</fullName>
    <label>諸掛</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>