force-app/main/default/objects/QuoteLineItem/fields/COWO_HHTProfit__c.field-meta.xml
<CustomField>
    <fullName>COWO_HHTProfit__c</fullName>
    <description>総仕入価格-総TC
一括編集時に計算される</description>
    <label>利益（HHT）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>