force-app/main/default/objects/QuoteLineItem/fields/COWO_HHTProfitRate__c.field-meta.xml
<CustomField>
    <fullName>COWO_HHTProfitRate__c</fullName>
    <description>利益（HHT）/総TC
一括編集時に計算される</description>
    <label>利益率（HHT）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>