force-app/main/default/objects/QuoteLineItem/fields/COWO_HHTWholesalePrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_HHTWholesalePrice__c</fullName>
    <description>HHTがフロント営業の会社に販売する価格</description>
    <label>仕切価格（HHT）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>