force-app/main/default/objects/QuoteLineItem/fields/COWO_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>COWO_ItemNumber__c</fullName>
    <description>S4連携項目</description>
    <label>明細番号</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>