force-app/main/default/objects/QuoteLineItem/fields/COWO_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_ListPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>HHTで設定している顧客への希望小売価格</description>
    <label>希望価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>