force-app/main/default/objects/QuoteLineItem/fields/COWO_MaterialAvailDate__c.field-meta.xml
<CustomField>
    <fullName>COWO_MaterialAvailDate__c</fullName>
    <description>S4連携項目</description>
    <label>品目利用可能日</label>
    <type>Date</type>
</CustomField>