force-app/main/default/objects/QuoteLineItem/fields/COWO_MaterialGroup1__c.field-meta.xml
<CustomField>
    <fullName>COWO_MaterialGroup1__c</fullName>
    <description>S4連携項目</description>
    <label>品目グループ1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>E:設計手配</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C:自動手配</label>
            </value>
            <value>
                <fullName>W</fullName>
                <label>W:WBS手配</label>
            </value>
            <value>
                <fullName>Z01</fullName>
                <label>Z01:特殊鋼</label>
            </value>
            <value>
                <fullName>Z02</fullName>
                <label>Z02:普通鋼・非鉄原料・非鉄製品</label>
            </value>
            <value>
                <fullName>Z03</fullName>
                <label>Z03:機能部品・樹脂原料</label>
            </value>
            <value>
                <fullName>Z04</fullName>
                <label>Z04:半導体・液晶・液晶部材</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>001:電子</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>002:光学</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>003:SEM</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>004:TEM</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>005:バイオ</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>006:医用</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>007:評価新事業</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>008:ゲート</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>009:アッシャー</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>010:プロセス部品</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>011:プロセス改造</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>012:分析（HHS）/（HHA）</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>013:HFS</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>014:HSL</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>015:HMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>