force-app/main/default/objects/QuoteLineItem/fields/COWO_MC__c.field-meta.xml
<CustomField>
    <fullName>COWO_MC__c</fullName>
    <description>製造原価</description>
    <label>MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>