force-app/main/default/objects/QuoteLineItem/fields/COWO_NoDiscountFlg__c.field-meta.xml
<CustomField>
    <fullName>COWO_NoDiscountFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True→按分計算外
False→按分対象</description>
    <label>値引対象外フラグ</label>
    <type>Checkbox</type>
</CustomField>