force-app/main/default/objects/QuoteLineItem/fields/COWO_PartitionPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_PartitionPrice__c</fullName>
    <label>仕切値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>