force-app/main/default/objects/QuoteLineItem/fields/COWO_PartsNo__c.field-meta.xml
<CustomField>
    <fullName>COWO_PartsNo__c</fullName>
    <description>パーツナンバー</description>
    <label>P/N</label>
    <length>15</length>
    <type>Text</type>
</CustomField>