force-app/main/default/objects/QuoteLineItem/fields/COWO_PlantCode__c.field-meta.xml
<CustomField>
    <fullName>COWO_PlantCode__c</fullName>
    <description>S4連携用項目</description>
    <label>プラント (STE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>