force-app/main/default/objects/QuoteLineItem/fields/COWO_PlantCode_MTE__c.field-meta.xml
<CustomField>
    <fullName>COWO_PlantCode_MTE__c</fullName>
    <label>プラント (MTE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>