force-app/main/default/objects/QuoteLineItem/fields/COWO_Price__c.field-meta.xml
<CustomField>
    <fullName>COWO_Price__c</fullName>
    <description>合計金額＋消費税
一括編集時に計算される</description>
    <label>金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>