force-app/main/default/objects/QuoteLineItem/fields/COWO_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>COWO_Product_Name__c</fullName>
    <label>製品名</label>
    <length>62</length>
    <type>Text</type>
</CustomField>