force-app/main/default/objects/QuoteLineItem/fields/COWO_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>COWO_ProductCode__c</fullName>
    <description>商品選択画面で選択した商品の商品コードが初期設定される。</description>
    <label>商品コード</label>
    <length>18</length>
    <type>Text</type>
</CustomField>