force-app/main/default/objects/QuoteLineItem/fields/COWO_ProductText__c.field-meta.xml
<CustomField>
    <fullName>COWO_ProductText__c</fullName>
    <description>製品を詳細に示すテキスト
商談商品の摘要から取得</description>
    <label>製品テキスト</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>