force-app/main/default/objects/QuoteLineItem/fields/COWO_ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>COWO_ProfitCenter__c</fullName>
    <label>利益センタ(STE)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>