force-app/main/default/objects/QuoteLineItem/fields/COWO_ProfitCenter_MTE__c.field-meta.xml
<CustomField>
    <fullName>COWO_ProfitCenter_MTE__c</fullName>
    <formula>Quote.Opportunity.SAWO_ProfitCenter_MTE__c</formula>
    <label>利益センタ(MTE)</label>
    <type>Text</type>
</CustomField>