force-app/main/default/objects/QuoteLineItem/fields/COWO_QuoteLineItem_IsActive__c.field-meta.xml
<CustomField>
    <fullName>COWO_QuoteLineItem_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>商品無効チェック</label>
    <type>Checkbox</type>
</CustomField>