force-app/main/default/objects/QuoteLineItem/fields/COWO_Rate__c.field-meta.xml
<CustomField>
    <fullName>COWO_Rate__c</fullName>
    <description>為替レート</description>
    <label>為替レート</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>