force-app/main/default/objects/QuoteLineItem/fields/COWO_Recording_Division__c.field-meta.xml
<CustomField>
    <fullName>COWO_Recording_Division__c</fullName>
    <label>計上区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z0</fullName>
                <label>Z0:完納</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>Z1:分納</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>