force-app/main/default/objects/QuoteLineItem/fields/COWO_S4LinkagePrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_S4LinkagePrice__c</fullName>
    <description>会計上の金額
　直販：合計金額/総TC合計×総TC
　海外商流：フロント仕入合計/総TC合計×総TC
一括編集時に計算される</description>
    <label>S/4連携金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>