force-app/main/default/objects/QuoteLineItem/fields/COWO_SalesNoteCustome__c.field-meta.xml
<CustomField>
    <fullName>COWO_SalesNoteCustome__c</fullName>
    <label>得意先の販売ノート</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>