force-app/main/default/objects/QuoteLineItem/fields/COWO_SalesPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_SalesPrice__c</fullName>
    <label>販売単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>