force-app/main/default/objects/QuoteLineItem/fields/COWO_SalesStandard__c.field-meta.xml
<CustomField>
    <fullName>COWO_SalesStandard__c</fullName>
    <description>売上計上する基準（検収日基準や船積基準）</description>
    <label>売上基準</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出荷基準</fullName>
            </value>
            <value>
                <fullName>船積基準</fullName>
            </value>
            <value>
                <fullName>据付基準</fullName>
            </value>
            <value>
                <fullName>検収基準</fullName>
            </value>
            <value>
                <fullName>工事進行基準</fullName>
            </value>
            <value>
                <fullName>期間計上基準</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>