force-app/main/default/objects/QuoteLineItem/fields/COWO_ShippingInstructions__c.field-meta.xml
<CustomField>
    <fullName>COWO_ShippingInstructions__c</fullName>
    <label>出荷指図</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>