force-app/main/default/objects/QuoteLineItem/fields/COWO_SortNo__c.field-meta.xml
<CustomField>
    <fullName>COWO_SortNo__c</fullName>
    <label>並び順</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>