force-app/main/default/objects/QuoteLineItem/fields/COWO_StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>COWO_StorageLocation__c</fullName>
    <label>保管場所(STE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>