force-app/main/default/objects/QuoteLineItem/fields/COWO_StorageLocation_MTE__c.field-meta.xml
<CustomField>
    <fullName>COWO_StorageLocation_MTE__c</fullName>
    <description>S4連携用項目</description>
    <label>保管場所(MTE)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>