force-app/main/default/objects/QuoteLineItem/fields/COWO_TaxPercent__c.field-meta.xml
<CustomField>
    <fullName>COWO_TaxPercent__c</fullName>
    <description>見積の消費税率から取得</description>
    <formula>Quote.Consumption_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>