force-app/main/default/objects/QuoteLineItem/fields/COWO_TaxPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_TaxPrice__c</fullName>
    <description>合計金額×消費税率
一覧編集時に計算</description>
    <label>消費税</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>