force-app/main/default/objects/QuoteLineItem/fields/COWO_TC__c.field-meta.xml
<CustomField>
    <fullName>COWO_TC__c</fullName>
    <description>製造原価＋販売管理費など</description>
    <label>TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>