force-app/main/default/objects/QuoteLineItem/fields/COWO_TotalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>COWO_TotalDiscountPercent__c</fullName>
    <description>最終的な値引率
一括編集時に計算される</description>
    <label>トータル値引率（％）</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>