force-app/main/default/objects/QuoteLineItem/fields/COWO_TotalFrontPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_TotalFrontPurchasePrice__c</fullName>
    <description>フロント仕入価格×数量
トリガにて計算を実施、ページレイアウトで編集不可とすること</description>
    <label>総フロント仕入価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>