force-app/main/default/objects/QuoteLineItem/fields/COWO_TotalLocalCorporationTC__c.field-meta.xml
<CustomField>
    <fullName>COWO_TotalLocalCorporationTC__c</fullName>
    <description>現法TC×数量
トリガにて計算を実施、ページレイアウトで編集不可とすること</description>
    <label>総現法TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>