force-app/main/default/objects/QuoteLineItem/fields/COWO_TotalMC__c.field-meta.xml
<CustomField>
    <fullName>COWO_TotalMC__c</fullName>
    <description>MC×数量
トリガにて計算を実施、ページレイアウトで編集不可とすること</description>
    <label>総MC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>