force-app/main/default/objects/QuoteLineItem/fields/COWO_TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_TotalPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <description>販売価格-明細値引
一括編集時に設定される</description>
    <label>合計金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>