force-app/main/default/objects/QuoteLineItem/fields/COWO_TotalTC__c.field-meta.xml
<CustomField>
    <fullName>COWO_TotalTC__c</fullName>
    <description>TC×数量
トリガにて計算を実施、ページレイアウトで編集不可とすること</description>
    <label>総TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>