force-app/main/default/objects/QuoteLineItem/fields/DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmount__c</fullName>
    <inlineHelpText>Enter an amount (not percentage) that will be deducted from the Subtotal. If both a % and an amount are entered, then the % is deducted first, and then the amount. Note that the result will not be less than 0 or greater than 100.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>