force-app/main/default/objects/QuoteLineItem/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <inlineHelpText>Enter a % (not amount) that will be deducted from the Subtotal. If both a % and an amount are entered, then the % is deducted first, and then the amount. Note that the result will not be less than 0 or greater than 100.</inlineHelpText>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>