force-app/main/default/objects/QuoteLineItem/fields/Hidden2__c.field-meta.xml
<CustomField>
    <fullName>Hidden2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>