force-app/main/default/objects/QuoteLineItem/fields/Hidden__c.field-meta.xml
<CustomField>
    <fullName>Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, Sales Price for this line will be set to 0 and the amount should be included in other line.</inlineHelpText>
    <label>Hidden Price</label>
    <type>Checkbox</type>
</CustomField>