force-app/main/default/objects/QuoteLineItem/fields/hinmokuCode__c.field-meta.xml
<CustomField>
    <fullName>hinmokuCode__c</fullName>
    <defaultValue>&apos;J00018039&apos;</defaultValue>
    <label>品目コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>