force-app/main/default/objects/QuoteLineItem/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>品名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>