force-app/main/default/objects/QuoteLineItem/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <label>項目</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>