force-app/main/default/objects/QuoteLineItem/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>試験</fullName>
            </value>
            <value>
                <fullName>分析</fullName>
            </value>
            <value>
                <fullName>解析</fullName>
            </value>
            <value>
                <fullName>計測</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>