force-app/main/default/objects/QuoteLineItem/fields/JapanPurchase__c.field-meta.xml
<CustomField>
    <fullName>JapanPurchase__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Product purchased from Japan. Freight and customs costs will be applied.</inlineHelpText>
    <label>HHT Product</label>
    <type>Checkbox</type>
</CustomField>