force-app/main/default/objects/QuoteLineItem/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>For unknown reason, standard ListPrice field is not available in Formulas. This field (populated in trigger) provides a workaround.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>