force-app/main/default/objects/QuoteLineItem/fields/MainProduct__c.field-meta.xml
<CustomField>
    <fullName>MainProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this the main product for this Opportunity</inlineHelpText>
    <label>Main Product</label>
    <type>Checkbox</type>
</CustomField>