force-app/main/default/objects/QuoteLineItem/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductLineTypes</valueSetName>
    </valueSet>
</CustomField>