force-app/main/default/objects/QuoteLineItem/fields/PurchaseDiscount__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDiscount__c</fullName>
    <label>Purchase Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>