force-app/main/default/objects/QuoteLineItem/fields/PurchaseDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDiscountPercent__c</fullName>
    <label>Purchase Discount [%]</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>