force-app/main/default/objects/QuoteLineItem/fields/PurchaseDiscountValue__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDiscountValue__c</fullName>
    <label>Purchase Discount [Value]</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>