force-app/main/default/objects/QuoteLineItem/fields/PurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>PurchasePrice__c</fullName>
    <description>Purchase price from the Product record. Converted to Opportunity currency</description>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>