force-app/main/default/objects/QuoteLineItem/fields/PurchasePriceDiscountIncluded__c.field-meta.xml
<CustomField>
    <fullName>PurchasePriceDiscountIncluded__c</fullName>
    <formula>(  PurchasePrice__c  - PurchaseDiscountValue__c )* (1-  PurchaseDiscountPercent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price (discount included)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>