force-app/main/default/objects/QuoteLineItem/fields/QuoteLineItemName__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemName__c</fullName>
    <formula>&apos;Product Code: &apos; + Product2.ProductCode + &apos;, Product Name: &apos; + Product2.Name + &apos;, List Price: &apos; + TEXT(ListPrice__c) + &apos; &apos; + TEXT(CurrencyIsoCode) + &apos;, Sales Price: &apos; + TEXT(UnitPrice) + &apos; &apos; + TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Item Name</label>
    <type>Text</type>
</CustomField>