force-app/main/default/objects/QuoteLineItem/fields/RealDiscount__c.field-meta.xml
<CustomField>
    <fullName>RealDiscount__c</fullName>
    <formula>IF(
    ISBLANK(PurchaseDiscountValue__c),  
    PurchaseDiscountPercent__c,
     PurchaseDiscountValue__c /  PurchasePrice__c 
  )</formula>
    <label>Real Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>