force-app/main/default/objects/QuoteLineItem/fields/Requested_delivery_date_of_the_document__c.field-meta.xml
<CustomField>
    <fullName>Requested_delivery_date_of_the_document__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>納入日付(販売)</label>
    <type>Date</type>
</CustomField>