force-app/main/default/objects/QuoteLineItem/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Custom Sort Order (standard SortOrder field cannot be written)</description>
    <label>Sort Order</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>