force-app/main/default/objects/QuoteLineItem/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>テキスト</label>
    <length>40</length>
    <type>Text</type>
</CustomField>